--- a/index.html
+++ b/index.html
@@ -9,24 +9,18 @@
     <!-- Navigation Menu -->
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#stories">Community Stories</a></li>
-            <li><a href="#discussions">Discussions</a></li>
-            <li><a href="#resources">Resources</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="community_stories.html">Community Stories</a></li>
+            <li><a href="discussions.html">Discussions</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="contact_us.html">Contact Us</a></li>
         </ul>
     </nav>
-
-    <!-- Home Section -->
     <section id="home">
         <h1>Welcome to Diverse in Digital</h1>
         <p>Create a supportive community for students and employees of all ages and backgrounds.</p>
-        <div id="latest-posts">
-            <h2>Latest Blog Posts & Featured Stories</h2>
-            <!-- Latest posts will be inserted here -->
-        </div>
     </section>
 
     <!-- Blog Section -->
